# BIPL

./: CMakeLists.txt  POLIZ.txt  README.md  code_tokens.txt  compiler.h  main.cpp  read_me_before_edit_json_file.txt  sintacsis.cpp  start.cpp  start_state_machine_EXAMPLE.cpp  state_machine.cpp  state_machine.h  syntax.cpp  test_code.txt  tockens_types.json  tokens_types.json  wordtipe
Documentation/: README.md
